Add zoom on project page

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -23,3 +23,11 @@
         min-height: 0;
     }
 }
+
+.v-card {
+    transition: transform 5s;
+}
+
+.v-card:hover img {
+    transform: scale(1.1);
+}
