Fix height cover image

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -62,9 +62,7 @@ a {
 // Carousel transition speed
 .v-window {
     &-x-transition,
-    &-x-reverse-transition,
-    &-y-transition,
-    &-y-reverse-transition {
+    &-x-reverse-transition {
         &-enter-active,
         &-leave-active {
             transition: 4s cubic-bezier(0.25, 0.8, 0.5, 1) !important;
