--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -71,3 +71,12 @@ a {
         }
     }
 }
+
+.v-carousel-item {
+    .v-responsive__content {
+        display: flex;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: center;
+    }
+}
