Update footer mobile

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -12,6 +12,15 @@
 
 }
 
+.v-footer {
+    .logo {
+        img {
+            position: relative;
+            left: 16vw;
+        }
+    }
+}
+
 .v-tab__slider {
     bottom: -5px;
 }
