--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,15 +1,27 @@
 @import './base.css';
 
-.navigation__content {
-    height: calc(100vh - 100px);
-}
-
 .navigation {
     position: sticky;
     top: 0;
     z-index: 10;
     background-color: rgba(var(--v-theme-background), 0.8);
 
+    &__content {
+        height: calc(100vh - 100px);
+    }
+}
+
+.logo {
+    cursor: pointer;
+
+    &__image {
+        width: 100px;
+    }
+
+    &__signature {
+        width: 213px;
+        top: 16px;
+    }
 }
 
 .v-footer {
@@ -33,8 +45,35 @@
     }
 }
 
+.flipbook {
+    width: 800px;
+    height: 450px;
+
+    &__right-triangle {
+        cursor: pointer;
+        position: absolute;
+        top: 410px;
+        left: 760px;
+        height: 40px;
+        width: 40px;
+    }
+
+    &__left-triangle {
+        cursor: pointer;
+        position: absolute;
+        top: 410px;
+        left: 0;
+        height: 40px;
+        width: 40px
+    }
+}
+
 .project-card {
     transition: transform 10s;
+}
+
+.project-text {
+    white-space: pre-wrap;
 }
 
 .project-card:hover img {
@@ -92,4 +131,10 @@ a {
 
 .cursor {
     cursor: pointer;
+}
+
+.profile-page {
+    .v-tabs {
+        height: 48px
+    }
 }
