Create subtabs in mobile nav drawer

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -11,6 +11,21 @@
 
     &__content {
         height: calc(100vh - 100px);
+
+        &__main {
+            .v-list-item-title {
+                padding-top: 5px;
+                padding-bottom: 5px;
+            }
+
+            a {
+                min-height: 30px !important;
+            }
+
+            .v-list-item {
+                padding-left: 30px;
+            }
+        }
     }
 }
 
