Update carousel speed and home page text

--- a/src/assets/css/carousel.scss
+++ b/src/assets/css/carousel.scss
@@ -5,7 +5,8 @@
     &-x-reverse-transition {
       &-enter-active,
       &-leave-active {
-        transition: 4s cubic-bezier(0.25, 0.8, 0.5, 1) !important;
+        transition: 5s cubic-bezier(0.25, 0.8, 0.5, 1) !important;
+        transition-delay: 2s;
       }
     }
   }
